tests/results/syntax_errors/mismatched_return_type.own
compile::stdout 0

compile::stderr 10
tests/inputs/syntax_errors/mismatched_return_type.own:4:12:[1;31merror[0;39m:returning `u8*`, but type `i32` expected
     3 |     let string: u8* = "hello"
     4 |     return string
       |            ^
     5 | }
tests/inputs/syntax_errors/mismatched_return_type.own:2:11:[1;34mnote[0;39m:function return type `i32` defined here
     1 | 
     2 | fn main() i32 {
       |           ^
     3 |     let string: u8* = "hello"

compile::return_code 1

